fix collapse5, change projects card img

--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ S
   border-bottom: 1px #ddd solid; }
 
 #portfolio img {
-  margin-top: -50px;
+
   object-fit: cover;
 }
 #skills .card:hover {
